<resources>
    <string name="app_name">PillBoxesApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_first_name">"First Name:"</string>
    <string name="label_last_name">"Last Name:"</string>
    <string name="label_email">"Email:"</string>
    <string name="label_password">"Password:"</string>
    <string name="label_confirm_password">"Confirm Password:"</string>
    <string name="label_carer_checkbox">"Need a carer"</string>
    <string name="title_patient_details">"Need a carer"</string>
    <string name="action_sign_up">"Sign Up"</string>
</resources>
